unpackaged/main/default/objects/Excel_Importer_Template__mdt/Excel_Importer_Template__mdt.object-meta.xml
<CustomObject>
    <description>US-0011643 - SPIKE Implement Excel import module using JS to support copy paste</description>
    <label>Excel Importer Template</label>
    <pluralLabel>Excel Importer Templates</pluralLabel>
</CustomObject>