unpackaged/main/default/objects/Excel_Importer_Template__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <description>US-0011643 - SPIKE Implement Excel import module using JS to support copy paste</description>
    <label>Batch Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>