unpackaged/main/default/objects/Excel_Importer_Template__mdt/fields/Mapped_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Field_Names__c</fullName>
    <description>US-0011643 - SPIKE Implement Excel import module using JS to support copy paste</description>
    <label>Mapped Field Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>