unpackaged/main/default/objects/Excel_Importer_Template__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>US-0011643 - SPIKE Implement Excel import module using JS to support copy paste</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
                <default>true</default>
                <label>Insert</label>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>