unpackaged/main/default/objects/Excel_Importer_Template__mdt/fields/Sobject_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Api_Name__c</fullName>
    <description>US-0011643 SPIKE Implement Excel import module using JS to support copy paste</description>
    <label>Sobject Api Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>