unpackaged/main/default/objects/Excel_Importer_Template__mdt/fields/Use_Excel_Column_Header_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Use_Excel_Column_Header_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0011643 - SPIKE Implement Excel import module using JS to support copy paste</description>
    <label>Use Excel Column Header Mapping</label>
    <type>Checkbox</type>
</CustomField>